Prevent overflow to be visible

--- a/src/style.css
+++ b/src/style.css
@@ -29,4 +29,6 @@ body {
 html,
 body {
   user-select: none;
+  overflow: hidden;
+  max-height: 100vh;
 }
